--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -127,7 +127,7 @@
                 }
             })();
         </script>
-        <script>
+        <!-- <script>
             rudderanalytics = window.rudderanalytics = [];
             const methods = [
                 "load",
@@ -154,9 +154,9 @@
 
             rudderanalytics.load('27nVzMFTSMe6cmHp83TgHx7IWGw', 'https://highlightdnbhuinjitjnrd.dataplane.rudderstack.com\n');
             rudderanalytics.page();
-        </script>
+        </script> -->
 
-        <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js"></script>
+        <!-- <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js"></script> -->
         <script>
             window._highlightFirebaseConfigString = `{{.FirebaseConfigString}}`;
         </script>
