revert rrweb css change

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,7 +34,7 @@
         <link rel="stylesheet" href="%PUBLIC_URL%/public.css" />
         <link
             rel="stylesheet"
-            href="https://unpkg.com/@highlight-run/rrweb/dist/rrweb.css"
+            href="https://unpkg.com/@highlight-run/rrweb@0.9.27/dist/index.css"
         />
 
         <!-- Primary Meta Tags -->
