--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,35 +3,31 @@
     <head>
         <base href="/" />
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="%PUBLIC_URL%/apple-touch-icon.png"
+            href="/apple-touch-icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="%PUBLIC_URL%/favicon-32x32.png"
+            href="/favicon-32x32.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="%PUBLIC_URL%/favicon-16x16.png"
+            href="/favicon-16x16.png"
         />
-        <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
-        <link
-            rel="mask-icon"
-            href="%PUBLIC_URL%/safari-pinned-tab.svg"
-            color="#5629c6"
-        />
+        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5629c6" />
         <meta name="msapplication-TileColor" content="#5629c6" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#5629c6" />
 
-        <link rel="stylesheet" href="%PUBLIC_URL%/public.css" />
+        <link rel="stylesheet" href="/public.css" />
         <link
             rel="stylesheet"
             href="https://unpkg.com/@highlight-run/rrweb@0.9.27/dist/index.css"
@@ -56,10 +52,10 @@
             property="og:description"
             content="Highlight gives your team full transparency into the errors, interactions, and performance metrics of your client-side application."
         />
-        <meta property="og:image" content="%PUBLIC_URL%/hero.png" />
+        <meta property="og:image" content="/hero.png" />
 
         <!-- Twitter -->
-        <meta property="twitter:card" content="%PUBLIC_URL%/hero.png" />
+        <meta property="twitter:card" content="/hero.png" />
         <meta property="twitter:url" content="https://app.highlight.run/" />
         <meta
             property="twitter:title"
@@ -69,23 +65,15 @@
             property="twitter:description"
             content="Highlight gives your team full transparency into the errors, interactions, and performance metrics of your client-side application."
         />
-        <meta property="twitter:image" content="%PUBLIC_URL%/hero.png" />
+        <meta property="twitter:image" content="/hero.png" />
 
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="apple-touch-icon" href="/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+        <link rel="manifest" href="/manifest.json" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -132,11 +120,71 @@
         </script>
         <script>
             /* segment integration */
-            !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="ui8MhxHsEDcnMDyQ4yRV6Mk5YnG9oGMm";analytics.SNIPPET_VERSION="4.15.3";
-                analytics.load("ui8MhxHsEDcnMDyQ4yRV6Mk5YnG9oGMm");
-                analytics.page();
-            }}();
+            !(function () {
+                var analytics = (window.analytics = window.analytics || []);
+                if (!analytics.initialize)
+                    if (analytics.invoked)
+                        window.console &&
+                            console.error &&
+                            console.error('Segment snippet included twice.');
+                    else {
+                        analytics.invoked = !0;
+                        analytics.methods = [
+                            'trackSubmit',
+                            'trackClick',
+                            'trackLink',
+                            'trackForm',
+                            'pageview',
+                            'identify',
+                            'reset',
+                            'group',
+                            'track',
+                            'ready',
+                            'alias',
+                            'debug',
+                            'page',
+                            'once',
+                            'off',
+                            'on',
+                            'addSourceMiddleware',
+                            'addIntegrationMiddleware',
+                            'setAnonymousId',
+                            'addDestinationMiddleware',
+                        ];
+                        analytics.factory = function (e) {
+                            return function () {
+                                var t = Array.prototype.slice.call(arguments);
+                                t.unshift(e);
+                                analytics.push(t);
+                                return analytics;
+                            };
+                        };
+                        for (var e = 0; e < analytics.methods.length; e++) {
+                            var key = analytics.methods[e];
+                            analytics[key] = analytics.factory(key);
+                        }
+                        analytics.load = function (key, e) {
+                            var t = document.createElement('script');
+                            t.type = 'text/javascript';
+                            t.async = !0;
+                            t.src =
+                                'https://cdn.segment.com/analytics.js/v1/' +
+                                key +
+                                '/analytics.min.js';
+                            var n = document.getElementsByTagName('script')[0];
+                            n.parentNode.insertBefore(t, n);
+                            analytics._loadOptions = e;
+                        };
+                        analytics._writeKey =
+                            'ui8MhxHsEDcnMDyQ4yRV6Mk5YnG9oGMm';
+                        analytics.SNIPPET_VERSION = '4.15.3';
+                        analytics.load('ui8MhxHsEDcnMDyQ4yRV6Mk5YnG9oGMm');
+                        analytics.page();
+                    }
+            })();
         </script>
+
+        <script type="module" src="./src/index.tsx"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
