add back rrweb styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,10 @@
 		<meta name="theme-color" content="#5629c6" />
 
 		<link rel="stylesheet" href="/public.css" />
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/@highlight-run/rrweb@0.9.27/dist/index.css"
+		/>
 
 		<!-- Primary Meta Tags -->
 		<title>Highlight App</title>
