Replace Segment with Rudderstack

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,6 +119,7 @@
 		</script>
 		<script>
 			/* segment integration */
+			// TODO: Ask about our Segment usage. Are we using this still?
 			!(function () {
 				var analytics = (window.analytics = window.analytics || [])
 				if (!analytics.initialize)
@@ -184,6 +185,7 @@
 
 		<script type="module" src="./src/index.tsx"></script>
 	</head>
+
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
