--- a/email-templates/digest.html
+++ b/email-templates/digest.html
@@ -4,64 +4,6 @@
 		<meta charset="UTF-8" />
 		<title></title>
 		<style>
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 400;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2)
-					format('woff2');
-				unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9,
-					U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
-					U+A8E0-A8FB;
-			}
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 400;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2)
-					format('woff2');
-				unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020,
-					U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-			}
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 400;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2)
-					format('woff2');
-				unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC,
-					U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
-					U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-			}
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 700;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z11lFd2JQEl8qw.woff2)
-					format('woff2');
-				unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9,
-					U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839,
-					U+A8E0-A8FB;
-			}
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 700;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1JlFd2JQEl8qw.woff2)
-					format('woff2');
-				unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020,
-					U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-			}
-			@font-face {
-				font-family: 'Poppins';
-				font-style: normal;
-				font-weight: 700;
-				src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlFd2JQEk.woff2)
-					format('woff2');
-				unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC,
-					U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
-					U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-			}
 			* {
 				font-family: Helvetica, sans-serif;
 			}
@@ -224,20 +166,20 @@
 				white-space: normal;
 			}
 
-			#highlight-email-body a {
+			a {
 				color: #9d97aa;
 				text-decoration: none;
 			}
 
-			#highlight-email-body a:hover {
+			a:hover {
 				color: #72e4fc;
 			}
 
-			#highlight-email-body a:hover .cell-primary {
+			a:hover .cell-primary {
 				color: #72e4fc;
 			}
 
-			#highlight-email-body a:hover .stat-delta {
+			a:hover .stat-delta {
 				color: #72e4fc;
 			}
 
@@ -295,10 +237,23 @@
 			.right {
 				text-align: right;
 			}
+
+			.footer {
+				text-align: center;
+				padding: 40px 32px;
+			}
+
+			.unsubscribe-info {
+				color: #ffffff;
+			}
+
+			.unsubscribe-info a {
+				color: #72e4fc;
+			}
 		</style>
 	</head>
 	<body>
-		<div class="body-container" id="highlight-email-body">
+		<div class="body-container">
 			<div class="content-container">
 				<img
 					class="logo"
@@ -502,6 +457,14 @@
 						{{/each}}
 					</div>
 				</div>
+			</div>
+			<div class="footer">
+				<div class="unsubscribe-info">
+					This digest was sent to {{toEmail}}. If you don't want to
+					receive emails like this in the future, you can
+					<a href="{{unsubscribeUrl}}">unsubscribe</a>.
+				</div>
+				<div class="company-info"></div>
 			</div>
 		</div>
 	</body>
