--- a/email-templates/digest.html
+++ b/email-templates/digest.html
@@ -464,7 +464,7 @@
 					receive emails like this in the future, you can
 					<a href="{{unsubscribeUrl}}">unsubscribe</a>.
 				</div>
-				<div class="company-info"></div>
+				<div class="company-info">Highlight is a company</div>
 			</div>
 		</div>
 	</body>
